--- a/lib/generators/gomicroservice/scaffold/main.go.erb
+++ b/lib/generators/gomicroservice/scaffold/main.go.erb
@@ -4,6 +4,8 @@ import (
 	"fmt"
 	"net/http"
 	"os"
+	"log"
+	"log/syslog"
 	"<%= namespace %>/<%= application_name %>/global"
 	"<%= namespace %>/<%= application_name %>/handlers"
 
@@ -38,11 +40,19 @@ func setupInjection() {
 		panic(fmt.Sprintln("Unable to create StatsD Client: ", err))
 	}
 
+	syslogWriter, err := syslog.Dial("udp", global.Config.SysLogIP, syslog.LOG_SYSLOG, "sorcery")
+	if err != nil {
+		panic(fmt.Sprintln("Unable to connect to syslog: ", err))
+	}
+
+	logWriter := log.New(syslogWriter, "<%= application_name %>: ", log.Lshortfile)
+
 	err = g.Provide(
 		&inject.Object{Value: handlers.RouterDependencies},
 		&inject.Object{Value: handlers.HealthDependencies},
 		&inject.Object{Value: handlers.EchoDependencies},
 		&inject.Object{Value: statsdClient, Name: "statsd"},
+		&inject.Object{Value: logWriter},
 	)
 
 	if err != nil {
