--- a/lib/generators/gomicroservice/scaffold/handlers/echo.go.erb
+++ b/lib/generators/gomicroservice/scaffold/handlers/echo.go.erb
@@ -4,6 +4,7 @@ import (
 	"encoding/json"
 	"fmt"
 	"net/http"
+	"log"
 
 	"github.com/gorilla/context"
 	"<%= namespace %>/<%= application_name %>/logging"
@@ -11,9 +12,11 @@ import (
 
 type EchoDependenciesContainer struct {
 	StatsD logging.StatsD `inject:"statsd"`
+	Log    *log.Logger    `inject:""`
 }
 
 var EchoDependencies *EchoDependenciesContainer = &EchoDependenciesContainer{}
+const EHTAGNAME = "EchoHandler: "
 
 // use the validation middleware to automatically validate input
 // github.com/asaskevich/govalidator
@@ -23,6 +26,7 @@ type Echo struct {
 
 func EchoHandler(rw http.ResponseWriter, r *http.Request) {
 	EchoDependencies.StatsD.Increment(ECHO_HANDLER + POST + CALLED)
+	EchoDependencies.Log.Printf("%v Called GET\n", EHTAGNAME)
 
 	// request is set into the context from the middleware
 	request := context.Get(r, "request").(*Echo)
