--- a/lib/generators/gomicroservice/scaffold/handlers/health.go.erb
+++ b/lib/generators/gomicroservice/scaffold/handlers/health.go.erb
@@ -3,6 +3,7 @@ package handlers
 import (
 	"encoding/json"
 	"net/http"
+	"log"
 
 	"<%= namespace %>/<%= application_name %>/logging"
 )
@@ -31,6 +32,9 @@ type HealthDependenciesContainer struct {
 	// statsD interface must use a name type as injection cannot infer ducktypes
 	Stats logging.StatsD `inject:"statsd"`
 
+	// reference to the log writer
+	Log   *log.Logger     `inject:""`
+
 	// if not specified in the graph will automatically create private instance
 	PrivateBuilder *HealthResponseBuilder `inject:"private"`
 }
@@ -40,10 +44,12 @@ type HealthResponse struct {
 }
 
 var HealthDependencies *HealthDependenciesContainer = &HealthDependenciesContainer{}
+const HHTAGNAME = "HealthHandler: "
 
 func HealthHandler(rw http.ResponseWriter, r *http.Request) {
 	// all HealthHandlerDependencies are automatically created by injection process
 	HealthDependencies.Stats.Increment(HEALTH_HANDLER + GET + CALLED)
+	HealthDependencies.Log.Printf("%v Called GET\n", HHTAGNAME)
 
 	response := HealthDependencies.SingletonBuilder.SetStatusMessage("OK").Build()
 
