updated version to add syslogd

--- a/lib/generators/gomicroservice/scaffold/handlers/echo_test.go.erb
+++ b/lib/generators/gomicroservice/scaffold/handlers/echo_test.go.erb
@@ -6,7 +6,8 @@ import (
 	"net/http"
 	"net/http/httptest"
 	"testing"
-
+	"log"
+	"os"
 	"github.com/facebookgo/inject"
 	"github.com/gorilla/context"
 	"github.com/stretchr/testify/assert"
