--- a/lib/generators/gomicroservice/scaffold/handlers/health_test.go.erb
+++ b/lib/generators/gomicroservice/scaffold/handlers/health_test.go.erb
@@ -5,7 +5,8 @@ import (
 	"net/http"
 	"net/http/httptest"
 	"testing"
-
+	"log"
+	"os"
 	"github.com/facebookgo/inject"
 	"github.com/stretchr/testify/assert"
 	"github.com/stretchr/testify/mock"
