--- a/lib/generators/gomicroservice/scaffold/handlers/middleware_requestvalidation.go.erb
+++ b/lib/generators/gomicroservice/scaffold/handlers/middleware_requestvalidation.go.erb
@@ -2,41 +2,60 @@ package handlers
 
 import (
 	"encoding/json"
-	"fmt"
 	"io/ioutil"
 	"net/http"
 	"reflect"
 
+	log "github.com/Sirupsen/logrus"
 	"github.com/asaskevich/govalidator"
 	"github.com/gorilla/context"
-	"<%= namespace %>/<%= application_name %>/logging"
 )
 
-func requestValidationHandler(mainHandlerRef string, t reflect.Type, statsD logging.StatsD, next http.Handler) http.Handler {
-	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+const kRequestValidationTag = "RequestValidation"
 
-		request := reflect.New(t).Interface()
+type validationRequestKey struct{}
 
-		defer r.Body.Close()
-		data, _ := ioutil.ReadAll(r.Body)
+type requestValidationDependencies struct {
+	logger *log.Logger
+}
 
-		err := json.Unmarshal(data, &request)
-		if err != nil {
-			http.Error(w, "Invalid Request", http.StatusBadRequest)
-			statsD.Increment(mainHandlerRef + BAD_REQUEST)
-			return
-		}
+type requestValidationHandler struct {
+	deps requestValidationDependencies
+	t    reflect.Type
+	next http.Handler
+}
 
-		_, err = govalidator.ValidateStruct(request)
-		if err != nil {
-			fmt.Println("Validation Error:", err)
-			http.Error(w, "Invalid Request", http.StatusBadRequest)
-			statsD.Increment(mainHandlerRef + INVALID_REQUEST)
-			return
-		}
+func (rv *requestValidationHandler) ServeHTTP(w http.ResponseWriter, r *http.Request) {
+	rv.deps.logger.WithField(kRequestValidationTag, r.Method+" Called")
 
-		context.Set(r, "request", request)
-		statsD.Increment(mainHandlerRef + VALID_REQUEST)
-		next.ServeHTTP(w, r)
-	})
+	request := reflect.New(rv.t).Interface()
+
+	defer r.Body.Close()
+	data, _ := ioutil.ReadAll(r.Body)
+
+	err := json.Unmarshal(data, &request)
+	if err != nil {
+		rv.deps.logger.WithField(kRequestValidationTag, "Bad request")
+		http.Error(w, "Invalid Request", http.StatusBadRequest)
+		return
+	}
+
+	_, err = govalidator.ValidateStruct(request)
+	if err != nil {
+		rv.deps.logger.WithField(kRequestValidationTag, "Validation error")
+		http.Error(w, "Invalid Request", http.StatusBadRequest)
+		return
+	}
+
+	context.Set(r, "request", request)
+
+	rv.next.ServeHTTP(w, r)
+}
+
+func newRequestValidationHandler(deps requestValidationDependencies, t reflect.Type, next http.Handler) http.Handler {
+	return &requestValidationHandler{
+		deps: deps,
+		t:    t,
+		next: next,
+	}
 }
