--- a/lib/generators/gomicroservice/scaffold/handlers/middleware_requestvalidation_test.go.erb
+++ b/lib/generators/gomicroservice/scaffold/handlers/middleware_requestvalidation_test.go.erb
@@ -8,78 +8,71 @@ import (
 	"reflect"
 	"testing"
 
+	log "github.com/Sirupsen/logrus"
 	"github.com/gorilla/context"
 	"github.com/stretchr/testify/assert"
 	"github.com/stretchr/testify/mock"
-	"<%= namespace %>/<%= application_name %>/mocks"
 )
 
 type mockType struct {
 	FirstName string `json:"first_name" valid:"alphanum,stringlength(1|255),required"`
 }
 
-var mockHandler *mocks.MockHandler
-var mockRequestStatsD *mocks.MockStatsD
+var mh *mockHandler
 
-func setupRequestValidationTests(t *testing.T) {
-	mockHandler = &mocks.MockHandler{}
-	mockRequestStatsD = &mocks.MockStatsD{}
+func setupRequestValidationTests(t *testing.T) http.Handler {
+	mh = &mockHandler{}
+	mh.Mock.On("ServeHTTP", mock.Anything, mock.Anything)
 
-	mockRequestStatsD.Mock.On("Increment", mock.Anything)
-	mockHandler.Mock.On("ServeHTTP", mock.Anything, mock.Anything)
+	validationHandler := newRequestValidationHandler(requestValidationDependencies{
+		logger: &log.Logger{},
+	},
+		reflect.TypeOf(mockType{}),
+		mh)
+
+	return validationHandler
 }
 
 func TestCallsNextOnSuccessfulValidation(t *testing.T) {
-	setupRequestValidationTests(t)
+	handler := setupRequestValidationTests(t)
 	var responseRecorder httptest.ResponseRecorder
 	var request http.Request
 	request.Body = ioutil.NopCloser(bytes.NewBufferString(`{"first_name": "Nic"}`))
 
-	handlerFunc := requestValidationHandler(HEALTH_HANDLER, reflect.TypeOf(mockType{}), mockRequestStatsD, mockHandler)
+	handler.ServeHTTP(&responseRecorder, &request)
 
-	handlerFunc.ServeHTTP(&responseRecorder, &request)
-
-	mockHandler.Mock.AssertCalled(t, "ServeHTTP", mock.Anything, mock.Anything)
-	mockRequestStatsD.Mock.AssertCalled(t, "Increment", HEALTH_HANDLER+VALID_REQUEST)
+	mh.Mock.AssertCalled(t, "ServeHTTP", mock.Anything, mock.Anything)
 }
 
 func TestSetsContextSuccessfully(t *testing.T) {
-	setupRequestValidationTests(t)
+	handler := setupRequestValidationTests(t)
 	var responseRecorder httptest.ResponseRecorder
 	var request http.Request
 	request.Body = ioutil.NopCloser(bytes.NewBufferString(`{"first_name": "Nic"}`))
 
-	handlerFunc := requestValidationHandler(HEALTH_HANDLER, reflect.TypeOf(mockType{}), mockRequestStatsD, mockHandler)
-
-	handlerFunc.ServeHTTP(&responseRecorder, &request)
+	handler.ServeHTTP(&responseRecorder, &request)
 	requestObj := context.Get(&request, "request").(*mockType)
 	assert.Equal(t, "Nic", requestObj.FirstName)
 }
 
 func TestReturnsBadRequestWhenNoObject(t *testing.T) {
-	setupRequestValidationTests(t)
+	handler := setupRequestValidationTests(t)
 	var responseRecorder httptest.ResponseRecorder
 	var request http.Request
 	request.Body = ioutil.NopCloser(bytes.NewBufferString(``))
 
-	handlerFunc := requestValidationHandler(HEALTH_HANDLER, reflect.TypeOf(mockType{}), mockRequestStatsD, mockHandler)
-
-	handlerFunc.ServeHTTP(&responseRecorder, &request)
+	handler.ServeHTTP(&responseRecorder, &request)
 
 	assert.Equal(t, http.StatusBadRequest, responseRecorder.Code)
-	mockRequestStatsD.Mock.AssertCalled(t, "Increment", HEALTH_HANDLER+BAD_REQUEST)
 }
 
 func TestReturnsBadRequestWhenRequestInvalid(t *testing.T) {
-	setupRequestValidationTests(t)
+	handler := setupRequestValidationTests(t)
 	var responseRecorder httptest.ResponseRecorder
 	var request http.Request
 	request.Body = ioutil.NopCloser(bytes.NewBufferString(`{"first_name": ""}`))
 
-	handlerFunc := requestValidationHandler(HEALTH_HANDLER, reflect.TypeOf(mockType{}), mockRequestStatsD, mockHandler)
-
-	handlerFunc.ServeHTTP(&responseRecorder, &request)
+	handler.ServeHTTP(&responseRecorder, &request)
 
 	assert.Equal(t, http.StatusBadRequest, responseRecorder.Code)
-	mockRequestStatsD.Mock.AssertCalled(t, "Increment", HEALTH_HANDLER+INVALID_REQUEST)
 }
