--- a/lib/generators/gomicroservice/scaffold/handlers/health.go.erb
+++ b/lib/generators/gomicroservice/scaffold/handlers/health.go.erb
@@ -3,58 +3,34 @@ package handlers
 import (
 	"encoding/json"
 	"net/http"
-	"log"
 
-	"<%= namespace %>/<%= application_name %>/logging"
+	log "github.com/Sirupsen/logrus"
 )
 
-// This is not particularlly a real world example it mearly shows how a builder or a factory could be injected
-// into the HealthHandler
-type HealthResponseBuilder struct {
-	statusMessage string
-}
-
-func (b *HealthResponseBuilder) SetStatusMessage(message string) *HealthResponseBuilder {
-	b.statusMessage = message
-	return b
-}
-
-func (b *HealthResponseBuilder) Build() HealthResponse {
-	var hr HealthResponse
-	hr.StatusMessage = b.statusMessage
-	return hr
-}
-
-type HealthDependenciesContainer struct {
-	// if not specified will create singleton
-	SingletonBuilder *HealthResponseBuilder `inject:""`
-
-	// statsD interface must use a name type as injection cannot infer ducktypes
-	Stats logging.StatsD `inject:"statsd"`
-
-	// reference to the log writer
-	Log   *log.Logger     `inject:""`
-
-	// if not specified in the graph will automatically create private instance
-	PrivateBuilder *HealthResponseBuilder `inject:"private"`
-}
+const kTagHealth = "HealthHandler"
 
 type HealthResponse struct {
 	StatusMessage string `json:"status_message"`
 }
 
-var HealthDependencies *HealthDependenciesContainer = &HealthDependenciesContainer{}
-const HHTAGNAME = "HealthHandler: "
+type healthHandlerDependencies struct {
+	logger *log.Logger
+}
 
-func HealthHandler(rw http.ResponseWriter, r *http.Request) {
+type healthHandler struct {
+	deps healthHandlerDependencies
+}
+
+func (h *healthHandler) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
 	// all HealthHandlerDependencies are automatically created by injection process
-	HealthDependencies.Stats.Increment(HEALTH_HANDLER + GET + CALLED)
-	HealthDependencies.Log.Printf("%v Called GET\n", HHTAGNAME)
+	h.deps.logger.WithField(kTagHealth, "Called GET")
 
-	response := HealthDependencies.SingletonBuilder.SetStatusMessage("OK").Build()
+	response := HealthResponse{StatusMessage: "OK"}
 
 	encoder := json.NewEncoder(rw)
 	encoder.Encode(&response)
+}
 
-	HealthDependencies.Stats.Increment(HEALTH_HANDLER + GET + SUCCESS)
+func newHealthHandler(deps healthHandlerDependencies) http.Handler {
+	return &healthHandler{deps}
 }
